tests/NormalTests/paczka2/big_fuzzy/55167873.err
Error in line 8: S432 S432 67,5
Error in line 7: zeSp A365 0,1
Error in line 13: zeSp A918 41,7
Error in line 14: zeSp A573 90,1
Error in line 21: S432 A365 -1,1
Error in line 15: L4K0CTMqsV S432 88,0
Error in line 26: zeSp A918 32,4
Error in line 47: F4uPMzA A918 5,6
Error in line 54: QABb A365 15,9
Error in line 58: S432 A365 99,7
Error in line 57: i5vZ A365 34,5
Error in line 65: L4K0CTMqsV S432 44,7
Error in line 79: QABb A365 28,4
Error in line 85: QABb A918 32,3
Error in line 96: i5vZ A918 75,1
Error in line 103: i5vZ A573 49,9
Error in line 116: Sl32 Sl32 99,6
Error in line 118: L4K0CTMqsV S432 78,
Error in line 112: zeSp A573 65,1
Error in line 131: F4uPMzA S432 14,3
Error in line 132: F4uPMzA A365 52,1
Error in line 130: QABb S432 74,3
Error in line 137: L4K0CTMqsV A573 42,0
Error in line 140: zeSp S432 46,9
Error in line 158: QABb A918 65,9
Error in line 165: zeSp S432 46,7
Error in line 176: zeSp A365 39,6
Error in line 183: kFgm7nNEnft A365 43,1
Error in line 184: zeSp A91 0,4
Error in line 196: i5vZ A573 39,0
Error in line 186: zeSp A918 0,0
Error in line 204: QABb A918 59,0
Error in line 205: zeSp A365 36,0
Error in line 215: i5vZ A918 4,2
Error in line 214: F4uPMzA S432 35,0
Error in line 226: L4K0CTMqsV A573 7;,6
Error in line 227: F4uPMzA A573 61,75
Error in line 224: L4K0CTMqsV S432 63,0
Error in line 236: zeS? A365 98,4
Error in line 213: QABb A573 7,2
Error in line 237: QABb S432 17,5
Error in line 228: L4K0CTMqsV A573 310,4
Error in line 242: L4K0CTMqsV A365 66,9
Error in line 229: F4uPMzA A573 1910,9
